--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
     restart: on-failure
     environment:
       - ACAPY_ENDPOINT=http://veritable-cloudagent-issuer:8000
+      - ACAPY_LABEL=issuer
       - ACAPY_GENESIS_URL=http://von-webserver-1:8000/genesis
       - ACAPY_OUTBOUND_TRANSPORT=http
       - ACAPY_AUTO_PROVISION=true
@@ -35,6 +36,7 @@ services:
     restart: on-failure
     environment:
       - ACAPY_ENDPOINT=http://veritable-cloudagent-licensee:8000
+      - ACAPY_LABEL=licensee
       - ACAPY_GENESIS_URL=http://von-webserver-1:8000/genesis
       - ACAPY_OUTBOUND_TRANSPORT=http
       - ACAPY_AUTO_PROVISION=true
@@ -54,6 +56,7 @@ services:
     restart: on-failure
     environment:
       - ACAPY_ENDPOINT=http://veritable-cloudagent-verifier:8000
+      - ACAPY_LABEL=verifier
       - ACAPY_GENESIS_URL=http://von-webserver-1:8000/genesis
       - ACAPY_OUTBOUND_TRANSPORT=http
       - ACAPY_AUTO_PROVISION=true
@@ -73,6 +76,7 @@ services:
     restart: on-failure
     environment:
       - ACAPY_ENDPOINT=http://veritable-cloudagent-authority:8000
+      - ACAPY_LABEL=authority
       - ACAPY_GENESIS_URL=http://von-webserver-1:8000/genesis
       - ACAPY_OUTBOUND_TRANSPORT=http
       - ACAPY_AUTO_PROVISION=true
