Change name to assigned alias webserver

--- a/docker/AriesCloudAgentCommon.env
+++ b/docker/AriesCloudAgentCommon.env
@@ -1,4 +1,4 @@
-ACAPY_GENESIS_URL=http://von_webserver_1:8000/genesis
+ACAPY_GENESIS_URL=http://webserver:8000/genesis
 ACAPY_OUTBOUND_TRANSPORT=http
 ACAPY_AUTO_PROVISION=true
 ACAPY_WALLET_TYPE=indy
