F2P-47: clean up cypress, extract away from docker compose, use e2e.sh script for e2e tests.

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@
 .gitignore
 .prettierrc
 
-docker/cypress/downloads
-docker/cypress/videos
-docker/cypress/screenshots
-
-# Tests agent standalone script
-tests-agent/node_modules
+cypress/downloads
+cypress/videos
+cypress/screenshots
+cypress.env.json
