--- a/docker/Dockerfile.init
+++ b/docker/Dockerfile.init
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.4
 
-from bcgovimages/aries-cloudagent:py36-1.16-1_0.7.3
+FROM bcgovimages/aries-cloudagent:py36-1.16-1_0.7.3
 
 # add in init command script with no secrets
 COPY <<EOF /home/indy/init.txt
@@ -11,7 +11,7 @@ wallet open Wtrustee key=wtrusteekey
 did new did=V4SGRU86Z58d6TV7PBUe6f seed=000000000000000000000000Trustee1 metadata=trustee
 did use V4SGRU86Z58d6TV7PBUe6f
 ledger custom {"reqId":1646776289419356200,"identifier":"V4SGRU86Z58d6TV7PBUe6f","operation":{"type":"1","dest":"WEVUqNxskVCusLM2NRHnzU","role":"101","verkey":"~6ujbFkk3soieb5jZtaSyMn","alias":"issuer"},"protocolVersion":2} sign=true
-ledger custom {"reqId":1646776289419356201,"identifier":"V4SGRU86Z58d6TV7PBUe6f","operation":{"type":"1","dest":"EG88MxsfwCTydduSoSeG6j","role":"101","verkey":"~3AaQSKCJiK3w26Nps5o85V","alias":"authority"},"protocolVersion":2} sign=true
+ledger custom {"reqId":1646776289419356201,"identifier":"V4SGRU86Z58d6TV7PBUe6f","operation":{"type":"1","dest":"EG88MxsfwCTydduSoSeG6j","role":"101","verkey":"~3AaQSKCJiK3w26Nps5o85V","alias":"regulator"},"protocolVersion":2} sign=true
 exit
 EOF
 
